# scrapy-patterns

./: .coveragerc  .gitignore  .pylintrc  .travis.yml  LICENSE  README.md  index.html  index.md  request_factory.html  requirements-test.txt  setup.cfg  setup.py  site_structure.html
.github/workflows/: gh-pages.yml
scrapy_patterns/: documentation.md  index.html  request_factory.html  request_factory.py  site_structure.py
scrapy_patterns/spiderlings/: __init__.py  index.html  site_pager.html  site_pager.py  site_structure_discoverer.html  site_structure_discoverer.py
scrapy_patterns/spiders/: __init__.py  category_based_spider.py  index.html
scrapy_patterns/spiders/private/: category_based_spider_state.html  category_based_spider_state.py  index.html
spiderlings/: index.html  site_pager.html  site_structure_discoverer.html
spiders/: category_based_spider.html  index.html
spiders/private/: category_based_spider_state.html  index.html
tests/: test_category_based_spider.py  test_category_based_spider_state.py  test_request_factory.py  test_site_pager.py  test_site_structure.py  test_site_structure_discoverer.py
