[metadata]
name = scrapy-patterns
version = 1.0.1
url = https://github.com/oliverdozsa/scrapy-patterns
licence = MIT
description = Scrapy Patterns
long_description = file:README.md
long_description_content_type = text/markdown
author = oliverdozsa
author_email = dozsa.oliver@gmail.com

[options]
include_package_data = true

[pep8]
max-line-length = 120
